# FCA

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_DOCUMENTATION.md  HTML_INTEGRATION_REPORT.md  PROJECT_CLEANUP_SUMMARY.md  README.md  WEB_APP_GUIDE.md  customer_experience_enhancements.py  performance_profiler.py  sorce_url.txt  structure_reorganization_report.json  test_widget_debug.html
archive/cleanup_backup_20250805_120803/: app_modular.py  automated_health_check.py  comprehensive_benchmark.py  generate_dashboard_data.py  model_visualization.py  optimization_analysis.py  performance_analyzer.py  performance_optimizer.py  real_time_monitoring.py  security_audit.py  simple_api.py  simple_model_visualization.py  test_advanced_fraud_detection.py  test_modular_system.py
archive/deprecated/: unified_web_app.py  unified_web_app_sidebar.py
backend/: server.py
config/: cleanup_report.json  health_check_config.json  health_check_results.json  optimization_analysis_results.json  pyproject.toml  requirements.txt  requirements_detection.txt  security_audit_report.json
core/: __init__.py  logging_manager.py  module_loader.py
dashboard_data/: attrition_data.json  charts.json  sentiment_data.json  summary.json
data/: dataset_metadata.json  performance_metrics.json  preprocessing_report.json
data/financial_phrasebank/: financial_phrasebank_processed.csv  financial_sentences_processed.csv
data/ibm_aml/: .gitignore  README.md  analyze_data.py  dataset_info.json  fraud_summary.json  ibm_aml_summary.json  process_data.py
docs/: API_ENDPOINT_MAPPING.md  DATA_LEAKAGE_PREVENTION_IMPROVEMENTS.md  FINAL_IMPLEMENTATION_REPORT.md  FRONTEND_BACKEND_ANALYSIS.md  PROJECT_OPTIMIZATION_GUIDE.md  PROJECT_STRUCTURE.md  PROJECT_TREE.md  README_MODULAR.md  STATIC_DASHBOARD_SUMMARY.md  SYSTEM_FLOW_DIAGRAM.md  WEB_NAVIGATION_ANALYSIS.md  WIDGET_IMPLEMENTATION_REPORT.md  complete_preprocessing_summary.md  customer_attrition_model_results.csv  data_analysis_strategy.md  eda_report.json  final_preprocessing_report.md  frontend_functionality_test.md  how_to_use_datasets_page.md  preprocessing_summary.md  processing_log.md  project_summary.md  quick_model_results.csv  sentiment_model_results.csv
docs/deployment/: IBM_AML_TIMEOUT_SOLUTION.md  (+1 more)
examples/: improved_fraud_detection_example.py
fca/: __init__.py
fraud_detection/: __init__.py
frontend_legacy/: ML_VALIDATION_REPORT.md  PERFORMANCE_REPORT.md  advanced-charts.js  advanced-statistics.js  api-client.js  dashboard.js  datasets.html  fca-performance-report-2025-07-26T14:01:49.json  fraud.html  index.html  ml-validation-suite.js  module-loader.js  performance-dashboard.js  performance-test-runner.js  performance-test.js  real-time-monitor.js  run-ml-validation.js  simple.html  styles.css  training-monitor.js  xai-analyzer.js
models/: secure_fraud_model.pkl  secure_fraud_model_report.json
notebooks/: customer_attrition_model.py  fraud_detection_models.py  model_comparison_dashboard.py  quick_fraud_models.py  simple_dashboard.py
scripts/: download_hf_datasets.py  download_kaggle_dataset.py  process_online_retail_ii_cancelled_orders.py  process_online_retail_ii_features.py
static_dashboard/: ARCHITECTURE_REFACTOR_REPORT.md  CHART_SYSTEM_README.md  CLEANUP_ANALYSIS.md  DATA_ACCESS_GUIDELINES.md  FILE_STRUCTURE_CLEAN.md  LOG_ANALYSIS_REPORT.md  MAINTENANCE_COMPLETE_REPORT.md  MODULARIZATION_COMPLETE_REPORT.md  MODULARIZATION_REPORT.md  OPTIMIZATION_ANALYSIS.md  PROJECT_STATUS.md  README.md  XAI_RESTRUCTURE_REPORT.md  XAI_WIDGETS_FIX_REPORT.md  bundle_data.py  dependency_test.html  generate_matplotlib_charts.py  generate_static_charts.py  index-modular.html  index.html  integration_test.html  modular-optimized.html  modular-test.py  quick_test_report.txt  serve-modular.py  serve.py  test_modular_structure.html  test_report.txt  test_stability.js  xai_debug.html
tests/: README.md  comprehensive_test.py  quick_web_test.py  test_dashboard.py  test_ibm_aml_integration.py  test_kagglehub_ibm_aml.py  test_minimal_system.py  test_server.py
web_app/: app.py  app_minimal.py
(+347 files in other folders)
